src/styles/oeb/elements.scss
.page-padding {
	padding-right: calc(var(--gridspacing) * 2);
	padding-left: calc(var(--gridspacing) * 2);
	padding-top: calc(var(--gridspacing) * 2);
	padding-bottom: calc(var(--gridspacing) * 2);

	@media (min-width: 768px) {
		padding-top: calc(var(--gridspacing) * 3);
		padding-bottom: calc(var(--gridspacing) * 3);
	}
	@media (min-width: 768px) {
		padding-right: calc(var(--gridspacing) * 4);
		padding-left: calc(var(--gridspacing) * 4);
	}
	@media (min-width: 1324px) {
		padding-right: calc(50% - 612px);
		padding-left: calc(50% - 612px);
	}
}

.oeb {
	.oeb-align-right {
		float: right;
	}

	.oeb-width-100 {
		width: 100%;
		overflow: auto;
	}

	.oeb-blue-section {
		background-color: var(--color-purple);
		color: white;
		padding: 7rem 0rem;
	}

	.oeb-white-section {
		background-color: white;
		color: black;
		padding: 7rem 0rem;
	}

	.oeb-lightpurple-section {
		background-color: var(--color-lightpurple);
		color: var(--color-purple);
		padding: 7rem 0rem;
	}

	.oeb-gray-section {
		background-color: var(--color-lightgray);
		color: var(--color-purple);
		padding: 7rem 0rem;
	}

	.oeb-button {
		display: inline-flex;
		height: 64px;
		padding: 15px 60px;
		justify-content: center;
		align-items: center;
		gap: 8px;
		border-radius: 10px;

		text-align: center;
		/* Button Reg */
		font-family: Rubik;
		font-size: 20px;
		font-style: normal;
		font-weight: 400;
		line-height: 150%; /* 30px */
	}

	.oeb-label-button {
		background: white;
		border: 1px solid;
		color: var(--color-purple);
		padding: 4px 16px 4px 16px;
		gap: 8px;
		border-radius: 10px;
	}

	.oeb-inset-padding {
		padding: 0em 24px;

		@media (min-width: 1024px) {
			padding: 0em 40px;
		}
	}

	.oeb-section {
		padding: 40px 0;
		@media (min-width: 768px) {
			padding: 88px 0;
		}
	}
	.oeb-section-sm {
		padding: 20px 0;
		@media (min-width: 768px) {
			padding: 40px 0;
		}
	}

	.oeb-headline-container {
		padding-bottom: 24px;
		@media (min-width: 768px) {
			padding-bottom: 88px;
		}
	}

	.oeb-headline-container-sm {
		padding-bottom: 24px;
		@media (min-width: 768px) {
			padding-bottom: 32px;
		}
	}

	.oeb-standard-padding-bottom {
		padding-bottom: 24px;
		@media (min-width: 768px) {
			padding-bottom: 40px;
		}
	}

	.oeb-tag {
		color: var(--color-purple);
		background-color: white;
		padding-left: 5px;
		padding-right: 5px;
		padding-top: 2px;
		padding-bottom: 2px;
		border-radius: 95px;
		border-style: solid;
		border-width: 1.59px;
		border-color: var(--color-purple);
		margin-right: 0.25rem;

		@media (min-width: 768px) {
			padding-left: 11.55px;
			padding-right: 11.55px;
			padding-top: 3.85px;
			padding-bottom: 3.85px;
		}
	}
}

.oeb-icon-circle {
	padding: 0.5em;
	display: inline-flex;
	border-radius: 50%;
	justify-content: center;
	align-items: center;
}

.oeb-slight-shadow {
	box-shadow: 0px 2px 2px 0px #0000000d;
}

.oeb-badge-card {
	box-shadow:
		0px 4px 8px 0px #0000000d,
		0px 2px 2px 0px #0000001a,
		0px 0px 0px 1px #0000001a;
}

.oeb-stickyfooter {
	display: grid;
	min-height: 100vh;
	grid-template-columns: 1fr;
	grid-template-areas:
		'nav   '
		'loader'
		'main  '
		'footer';
	grid-template-rows: 100px 6px 1fr auto;
}

.oeb-nav {
	grid-area: nav;
}

.oeb-loader {
	grid-area: loader;
}

.oeb-main {
	grid-area: main;
	max-width: 100vw;
}

.oeb-footer {
	grid-area: footer;
}

.oeb-badgeimage {
	display: block;
	height: 100px;
	width: 100px;
}

